@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Better logging about nonexistent tags
+* Dcm4Chee manufacturer
 
 
 Version 0.7.3 (2014/02/14)
